# IniFileParser

./: .gitignore  CMakeLists.txt  IniFileParser.cpp  IniFileParser.hpp  Makefile  Readme.md  test.ini
Sample/: main.cpp  test.ini
