
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(CMAKE_CXX_STANDARD 11)

FILE(GLOB PROJ_CPP_SOURCES
        ${CMAKE_CURRENT_LIST_DIR}/*.cpp
        ${CMAKE_CURRENT_LIST_DIR}/.hpp
        )

ADD_LIBRARY(inifileparser SHARED ${PROJ_CPP_SOURCES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})
ADD_EXECUTABLE(IniParser.bin ${CMAKE_CURRENT_LIST_DIR}/Sample/main.cpp)
TARGET_LINK_LIBRARIES(IniParser.bin inifileparser)

